Closed Bug 1424657 Opened 8 years ago Closed 8 years ago

After bug 1422201, webextension popup documents no longer accessible

Categories

(Core :: Disability Access APIs, defect)

All
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- fixed
firefox59 --- verified

People

(Reporter: Jamie, Assigned: Jamie)

References

Details

(Keywords: regression)

Attachments

(2 files)

Spun off bug 1422201 comment 21. STR (with NVDA): 1. Try to open grease monkey, or lastpass from the bar of addons. Expected: a browse mode document with NVDA. Actual: NVDA just reports unknown. These popup documents have their own HWND. Therefore, the root accessible of that HWND needs to handle accChild for ids in remote documents therein. Unfortunately, this isn't the "root" accessible, since the root accessible is the root of the main HWND. The root check needs to be tweaked so that it allows for the root accessible for any HWND.
Blocks: 1422201
Comment on attachment 8936327 [details] Bug 1424657: Make IAccessible::accChild handle remote ids for popup windows. https://reviewboard.mozilla.org/r/207052/#review213016 This looks great!
Attachment #8936327 - Flags: review?(eitan) → review+
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b27e2fb6c88f Make IAccessible::accChild handle remote ids for popup windows. r=eeejay
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Bug 1422201 changed GetIAccessibleFor so it only handles remote ids when called on the root accessible. However, this breaks webextension popup documents. These popups have their own HWND, so the root accessible of that HWND needs to handle accChild for ids in remote documents within that HWND. Therefore, expand the restriction to cover the root accessible of any HWND, not just the main HWND. MozReview-Commit-ID: 69v4XSeQLcS
Verified fixed in Firefox 59.0a1 20171213220121 64 bit.
Comment on attachment 8936658 [details] [diff] [review] Make IAccessible::accChild handle remote ids for popup windows. (Patch for 58.) r=eeejay Approval Request Comment [Feature/Bug causing the regression]: Bug 1422201. [User impact if declined]: Accessibility clients will not be able to access webextension popup documents. [Is this code covered by automated tests?]: No, because we don't have a mechanism for platform accessibility testing. [Has the fix been verified in Nightly?]: Yes. [Needs manual test from QE? If yes, steps to reproduce]: No. [List of other uplifts needed for the feature/fix]: None. [Is the change risky?]: Low risk. [Why is the change risky/not risky?]: Only affects accessibility. Straightforward patch. Easy to verify. [String changes made/needed]: None.
Attachment #8936658 - Flags: approval-mozilla-beta?
Comment on attachment 8936658 [details] [diff] [review] Make IAccessible::accChild handle remote ids for popup windows. (Patch for 58.) r=eeejay Fix for recent regression in a11y, let's uplift to beta.
Attachment #8936658 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Assignee: nobody → jteh
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: