Bug 1424657: Make IAccessible::accChild handle remote ids for popup windows. r=eeejay

Bug 1422201 changed GetIAccessibleFor so it only handles remote ids when called on the root accessible.
However, this breaks webextension popup documents.
These popups have their own HWND, so the root accessible of that HWND needs to handle accChild for ids in remote documents within that HWND.
Therefore, expand the restriction to cover the root accessible of any HWND, not just the main HWND.

MozReview-Commit-ID: 69v4XSeQLcS

--HG--
extra : rebase_source : bf5c5e0a475424b2276800d1a10ab1a46c136bd6